--- a/aula-1/atividade-02/package.json
+++ b/aula-1/atividade-02/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "calcular notas",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron main.js"
@@ -10,6 +11,6 @@
   "author": "nathan",
   "license": "ISC",
   "dependencies": {
-    "electron": "^38.4.0"
+    "electron": "^31.2.0"
   }
 }
