--- a/aula-1/atividades/package.json
+++ b/aula-1/atividades/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "atividade-2",
+  "name": "atividades",
   "version": "1.0.0",
-  "description": "calcular notas",
+  "description": "",
   "main": "main.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron main.js"
   },
-  "author": "nathan",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "electron": "^31.2.0"
+    "electron": "^38.4.0"
   }
 }
