--- a/tela-login-cadastro/package.json
+++ b/tela-login-cadastro/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "author": "nathan-santos",
   "type": "module",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electronmon src/main.js"
